@startuml

title __MAIN's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace ui.fragment.main {
        class com.zaozhuang.newborn.ui.fragment.main.FragmentHomeV1 {
            - iv_head : ImageView
            - ll0 : LinearLayout
            - ll1 : LinearLayout
            - ll2 : LinearLayout
            - ll3 : LinearLayout
            - ll_add_baby : LinearLayout
            - ll_baby : LinearLayout
            - rl_chart : RelativeLayout
            - rl_height : RelativeLayout
            - rl_home : RelativeLayout
            - rl_huangdan : RelativeLayout
            - rl_weight : RelativeLayout
            - rl_xinlv : RelativeLayout
            - rl_xueya : RelativeLayout
            - rl_xueyang : RelativeLayout
            - toggle : ToggleButton
            - tv_age : TextView
            - tv_name : TextView
            {static} + newInstance()
            + onClick()
            + onSelected()
            # clear()
            # getFragmentTag()
            # getLayoutId()
            # initListener()
            # initView()
            ~ onBabyLogic()
            ~ onBabySelLogic()
            - setAttr()
            - setBabySelLogic()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace ui.fragment.main {
        class com.zaozhuang.newborn.ui.fragment.main.FragmentMe {
            - babyList : List<Baby>
            - recyclerView : RecyclerView
            - rl_add_baby : RelativeLayout
            - rl_blue_connect : RelativeLayout
            - rl_register : RelativeLayout
            - rl_sliding : RelativeLayout
            - rl_touchevent : RelativeLayout
            - rl_transmit : RelativeLayout
            - rl_volley_test : RelativeLayout
            - tv_login : TextView
            {static} + newInstance()
            + onSelected()
            # clear()
            # getFragmentTag()
            # getLayoutId()
            # initData()
            # initListener()
            # initView()
            ~ onBabyLogic()
            ~ onBabySelLogic()
            ~ onLoginLogic()
            - loginSuccessLogic()
            - setAttr()
        }
      }
    }
  }
  

  com.zaozhuang.newborn.ui.fragment.main.FragmentHomeV1 .up.|> android.view.View.OnClickListener
  com.zaozhuang.newborn.ui.fragment.main.FragmentHomeV1 .up.|> com.zaozhuang.newborn.ui.base.fragment.IChildFragment
  com.zaozhuang.newborn.ui.fragment.main.FragmentHomeV1 -up-|> com.zaozhuang.newborn.ui.base.BaseFragment
  com.zaozhuang.newborn.ui.fragment.main.FragmentMe .up.|> com.zaozhuang.newborn.ui.base.fragment.IChildFragment
  com.zaozhuang.newborn.ui.fragment.main.FragmentMe -up-|> com.zaozhuang.newborn.ui.base.BaseFragment
  com.zaozhuang.newborn.ui.fragment.main.FragmentMe o-- com.zaozhuang.newborn.adapter.BabyItemAdapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
